docs/build/iota-sdk/2.0/docs/how-tos/nfts/mint-nft.mdx
---
title: Mint an NFT
description: 'How to mint an NFT'
image: /img/logo/iota_mark_light.png
tags:
  - how to
  - mint
  - nft
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Minting an [NFT](/learn/protocols/stardust/core-concepts/multi-asset-ledger#non-fungible-tokens-nfts)
refers to creating a unique and indivisible digital asset on [the Tangle](/get-started/introduction/iota/introduction#the-tangle).
When you mint an NFT, you usually associate a digital file, such as artwork, music, or video, with a specific token on
the Tangle, establishing its authenticity, ownership, and uniqueness. This is done by assigning
[metadata](/learn/protocols/stardust/core-concepts/output-features#metadata)
to the NFT, including details about the creator
(or [issuer](/learn/protocols/stardust/core-concepts/output-features#issuer)), the asset's
description, and any additional information relevant to its value or characteristics.

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

1. Instantiate a [`Wallet`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Define the `sender_address` as the wallet's [`Address`](https://docs.rs/iota-sdk/latest/iota_sdk/types/block/address/enum.Address.html).

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/nfts/mint_nft.rs#L52
```

</div>

3. Define the NFT's `metadata` as a video and add a description by chaining a call to `with_description()`.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/nfts/mint_nft.rs#L59-L66
```

</div>

4. Create a new [`MintNftParams`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html) and set its
   values by chaining calls to:
    * [`MintNftParams.try_with_address()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html) to define the [`Bech32Address`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/types/block/address/bech32/struct.Bech32Address.html),
    * [`MintNftParams.try_with_sender()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html#method.try_with_sender) to define the [sender](/learn/protocols/stardust/core-concepts/output-features#sender),
    * [`MintNftParams.with_metadata()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html#method.with_metadata) to add the [metadata](/learn/protocols/stardust/core-concepts/output-features/#metadata) defined in step 3,
    * [`MintNftParams.with_tag()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html#method.with_tag) to [tag](/learn/protocols/stardust/core-concepts/output-features/#tag) to [tag](/learn/protocols/stardust/core-concepts/output-features/#tag) the NFT with `NFT1_TAG`,
    * [`MintNftParams.try_with_issuer()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html#method.try_with_issuer) to set the [issuer](/learn/protocols/stardust/core-concepts/output-features/#issuer),
    * [`MintNftParams.with_immutable_metadata()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/operations/transaction/high_level/minting/mint_nfts/struct.MintNftParams.html#method.with_immutable_metadata) to add immutable [metadata](http://localhost:3000/learn/protocols/stardust/core-concepts/output-features/#metadata).

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/nfts/mint_nft.rs#L68-L79
```

</div>

4. Mint the NFTs using the [`Wallet.mint_nfts()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.mint_nfts)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/nfts/mint_nft.rs#L81
```

</div>

5. Await for the transaction to be accepted by the network by calling the [`Wallet.wait_for_transaction_acceptance()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.wait_for_transaction_acceptance) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/nfts/mint_nft.rs#L84-L86
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet) and [sync it](../accounts-and-addresses/check-balance.mdx).

2. Define the `senderAddress` as the wallet's [`Address`](../../references/nodejs/classes/Address.md).

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts#L51
```

</div>

3. Define the NFT's [`Irc27Metadata`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Irc27Metadata/) as a video and add a description by chaining a call to [`with_description()`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Irc27Metadata/#withdescription).

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts#L58-L62
```

</div>

4. Create a new [`MintNftParams`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/) and set the following properties:
    * [`address`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/#address),
    * [`sender`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/#sender) to define the [sender](/learn/protocols/stardust/core-concepts/output-features#sender),
    * [`metadata`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/#metadata) to add `NFT1_METADATA` as [metadata](http://localhost:3000/learn/protocols/stardust/core-concepts/output-features/#metadata).,
    * [`tag`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/#tag) to [tag](http://localhost:3000/learn/protocols/stardust/core-concepts/output-features/#tag) the NFT with `NFT1_TAG`,
    * [`issuer`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/#issuer) to set the [issuer](/learn/protocols/stardust/core-concepts/output-features/#issuer),
    * [`immutableMetadata`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/MintNftParams/#immutablemetadata) to add immutable [metadata](http://localhost:3000/learn/protocols/stardust/core-concepts/output-features/#metadata).

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts#L64-L71
```

</div>

4. Create the transaction that will mint the NFTs using the [`Wallet.mintNfts()`](../../references/nodejs/classes/Wallet.md#mintnfts)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts#L72
```

</div>

5. Await for the [`Transaction`](../../references/nodejs/classes/Transaction.md) to get confirmed by calling the
[`Wallet.waitForTransactionAcceptance()`](../../references/nodejs/classes/Wallet.md#waitfortransactionacceptance)
function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts#L75
```

</div>

6. Build the outputs for the transaction to mint another NFT using the [`Client.buildNftOutput()`](../../references/nodejs/classes/Client.md#buildnftoutput)
   function and send the transaction using the [`Wallet.sendOutputs()`](../../references/nodejs/classes/Wallet.md#sendoutputs) function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts#L85-L98
```

</div>

</TabItem>
<TabItem value="python" label="Python">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/wallet/) and [sync it](../accounts-and-addresses/check-balance.mdx).

2. Populate the `outputs` with a new [`MintNftParams`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/types/send_params/#mintnftparams-objects) and set its values.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/nfts/mint_nft.py#L24-L26
```

</div>

2. Mint the NFT using the [`Wallet.mint_nfts()`](../../references/python/iota_sdk/wallet/wallet.md#mint_nfts) function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/nfts/mint_nft.py#L28
```

</div>

</TabItem>
</Tabs>

## Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/nfts/mint_nft.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/nfts/mint_nft.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/nfts/mint_nft.py
```

</TabItem>
</Tabs>

### Expected Output

```bash
Transaction sent: 0x4890a22c8c06a55d0e28b00d7a684c2a25479ae02b644824a5930ff059418280
Block included: https://explorer.shimmer.network/testnet/block/0xa7e1459879b7a4114b505ad2c5c67bf62b98b13a5ba530018c928530af873c3b
Minted NFT 1
Transaction sent: 0x308078cfd811fb99621e51791a431c6a306a077aceb99df6409188c61a27f372
Block included: https://explorer.shimmer.network/testnet/block/0xa020b148abdeeb94256e4f78dd4e3d623420fd233e0bbf7c20f64fd53d4f4b8d
Minted NFT 2
```
